jerry-core/parser/js/new-parser/tests/js/do-while-parse-err.js.expected

--- Script parsing start ---

  [  1] CBC_PUSH_LITERAL idx:0->ident(x)
  [  0] CBC_POP_BLOCK

--- Script parsing end ---

Parse error 'While expected for do-while loop.' at line: 4 col: 23
