jerry-core/parser/js/new-parser/tests/js/do-while-parse-err.js
/* This test contains do-while statement parser tests. */

// This test must fail with parse error
do do x; while(false);; while(false)
